force-app/main/default/objects/Travel_Request__c/Travel_Request__c.object-meta.xml
<CustomObject>
    <label>Travel Request</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Travel Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>