force-app/main/default/objects/Travel_Request__c/fields/Changes_During_Trip__c.field-meta.xml
<CustomField>
    <fullName>Changes_During_Trip__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Changes During Trip</label>
    <type>Checkbox</type>
</CustomField>