force-app/main/default/objects/Travel_Request__c/fields/Detained_or_Arrested__c.field-meta.xml
<CustomField>
    <fullName>Detained_or_Arrested__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Detained or Arrested</label>
    <type>Checkbox</type>
</CustomField>