force-app/main/default/objects/Travel_Request__c/fields/Foreign_National_Contact_Request__c.field-meta.xml
<CustomField>
    <fullName>Foreign_National_Contact_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Foreign National Contact Request</label>
    <type>Checkbox</type>
</CustomField>