force-app/main/default/objects/Travel_Request__c/fields/Fully_Approved__c.field-meta.xml
<CustomField>
    <fullName>Fully_Approved__c</fullName>
    <formula>IF ( AND( Mission_Approved__c, SSO_Approved__c), TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fully Approved</label>
    <type>Checkbox</type>
</CustomField>