force-app/main/default/objects/Travel_Request__c/fields/Lose_Materials__c.field-meta.xml
<CustomField>
    <fullName>Lose_Materials__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lose Materials</label>
    <type>Checkbox</type>
</CustomField>