force-app/main/default/objects/Travel_Request__c/fields/Mission_Approved__c.field-meta.xml
<CustomField>
    <fullName>Mission_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mission Approved</label>
    <type>Checkbox</type>
</CustomField>