force-app/main/default/objects/Travel_Request__c/fields/Probing_Inquiries__c.field-meta.xml
<CustomField>
    <fullName>Probing_Inquiries__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Probing Inquiries</label>
    <type>Checkbox</type>
</CustomField>