force-app/main/default/objects/Travel_Request__c/fields/Problems_Encountered__c.field-meta.xml
<CustomField>
    <fullName>Problems_Encountered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Problems Encountered</label>
    <type>Checkbox</type>
</CustomField>