force-app/main/default/objects/Travel_Request__c/fields/Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Request_Type__c</fullName>
    <label>Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SSO Foreign Travel</fullName>
            </value>
            <value>
                <fullName>1207</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>