force-app/main/default/objects/Travel_Request__c/fields/SSO_Approved__c.field-meta.xml
<CustomField>
    <fullName>SSO_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SSO Approved</label>
    <type>Checkbox</type>
</CustomField>