force-app/main/default/objects/Travel_Request__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Awaiting Mission Approval</fullName>
            </value>
            <value>
                <fullName>Mission Approved</fullName>
            </value>
            <value>
                <fullName>SSO Approval</fullName>
            </value>
            <value>
                <fullName>Fully Approved</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Questionnaire Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>