force-app/main/default/objects/Travel_Request__c/fields/Subjected_to_Harassment__c.field-meta.xml
<CustomField>
    <fullName>Subjected_to_Harassment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Subjected to Harassment</label>
    <type>Checkbox</type>
</CustomField>