force-app/main/default/objects/Travel_Request__c/fields/Travel_Restrictions__c.field-meta.xml
<CustomField>
    <fullName>Travel_Restrictions__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Travel Restrictions</label>
    <type>Checkbox</type>
</CustomField>