force-app/main/default/objects/Travel_Request__c/fields/Victim_of_Criminal_Act__c.field-meta.xml
<CustomField>
    <fullName>Victim_of_Criminal_Act__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Victim of Criminal Act</label>
    <type>Checkbox</type>
</CustomField>