force-app/main/default/objects/Travel_Request__c/fields/Why_Description__c.field-meta.xml
<CustomField>
    <fullName>Why_Description__c</fullName>
    <label>Travel Justification</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>