force-app/main/default/objects/Travel_Request__c/listViews/Travel_Not_Started.listView-meta.xml
<ListView>
    <fullName>Travel_Not_Started</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Departure_Date__c</columns>
    <columns>Return_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Departure_Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <label>Travel Not Started</label>
</ListView>